<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/casino"
    tools:context="com.example.bublovskiy.project1_july.GetMoneyActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/editTextGetMoney"
        android:cursorVisible="false"
        android:background="@drawable/background_for_getmoneytextfield"
        android:textStyle="bold"
        android:textSize="@dimen/editTextGetMoney"
        android:textColor="#0bfc0b"
        android:gravity="center_horizontal"
        android:hint="@string/editTextGetMoney"
        android:elegantTextHeight="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewCancel"
        android:rotation="50"
        android:id="@+id/textViewCancel"
        android:textStyle="bold"
        android:textSize="@dimen/textViewCancelDone"
        android:textColor="#fefcfc"
        android:onClick="cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewDone"
        android:rotation="-50"
        android:id="@+id/textViewDone"
        android:textStyle="bold"
        android:textSize="@dimen/textViewCancelDone"
        android:textColor="#faf8f8"
        android:onClick="done"
        android:layout_alignTop="@+id/textViewCancel"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
